# pcomb

./: .gitignore  CMakeLists.txt  check.sh  readme.md  run.sh  test.sh
.circleci/: config.yml
include/pcomb/: adaptive.h  alternative.h  chain.h  common.h  const.h  constructive.h  core.h  end.h  exact.h  lazy.h  lexeme.h  many.h  messages.h  mock_stream.h  number.h  optional.h  parser.h  predicate.h  result.h  sequence.h  skipped.h  stream.h  stream_position.h  strict_alternative.h  strict_sequence.h  string_stream.h  trace.h  until.h
include/pcomb/privates/: adaptive.h  alternative.h  char.h  common.h  constructive.h  digit.h  dynamic_sequence.h  end.h  exact.h  lazy.h  magic.h  many.h  number.h  optional.h  predicate.h  sequence.h  skipped.h  strict_adaptive.h  strict_alternative.h  strict_sequence.h  strings.h  until.h
src/pcomb/: const.cc  core.cc  mock_stream.cc  stream_position.cc  string_stream.cc  trace.cc
test/: CMakeLists.txt  adaptive_test.cc  alternative_test.cc  chain_test.cc  common.h  constructive_test.cc  dummy.h  end_test.cc  exact_test.cc  hello_test.cc  lazy_test.cc  lexeme_test.cc  many_test.cc  mock_stream_test.cc  mock_test.cc  number_test.cc  optional_test.cc  predicate_test.cc  sequence_test.cc  strict_adaptive_test.cc  strict_alternative_test.cc  strict_sequence_test.cc  string_stream_test.cc  testing.h  trace_test.cc  transformers.cc  transformers.h  until_test.cc
test/pcomb/: core_test.cc
